--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "nuxt": "^2.14.0",
-    "raf": "^3.4.1"
+    "raf": "^3.4.1",
+    "vue-lazyload": "^1.3.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
