--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "colorthief": "^2.3.2",
+    "complementary-colors": "^1.0.5",
+    "gsap": "^3.4.2",
     "nuxt": "^2.14.0",
     "raf": "^3.4.1",
     "vue-lazyload": "^1.3.3"
